--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<section>
 			<textarea cols="20" rows="10" class="mensaje"></textarea>
 			<div>
-				<button class="btn-copiar">Copiar</button>
+				<button class="btn-copiar" onclick="copiar()">Copiar</button>
 			</div>
 		</section>
 		</main>
