Se agrega boton pegar para insertar mensaje en text area

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<textarea cols="20" rows="10" class="mensaje"></textarea>
 			<div>
 				<button class="btn-copiar" onclick="copiar()">Copiar</button>
+				<button class="btn-pegar" onclick="pegar()">Pegar</button>
 			</div>
 		</section>
 		</main>
